Kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: netflix-svc
spec:
  ports:
  - port: 80
    protocol: TCP
  type: NodePort
  selector:
    role: netflix
